# coding-agent

./: README.md  calculator.py  code_agent.py  my-advantage.md  pyproject.toml  trouble.md
local_cli/: __main__.py  agent.py  cli.py  config.py  identity.py  memory_proposals.py  prompts.py  self_heal.py  self_improvement.py  server.py  session_memory.py  skill_proposals.py  spinner.py  stat.py  sub_agent.py  web_monitor.py
local_cli/tools/: __init__.py  _fileio.py  agent_tool.py  archive_tool.py  ask_user_tool.py  edit_tool.py  git_tool.py  grep_tool.py  write_tool.py
tests/: test_agent.py  test_context_command.py  test_identity.py  test_memory_proposals.py  test_self_improvement.py  test_session_memory.py  test_session_memory_integration.py  test_skill_proposals.py  test_spinner.py
tests/test_tools/: test_edit_tool.py  test_fileio.py
